@@ -3,6 +3,8 @@ ver 0.23.12 (not yet released)
   - curl: require CURL 7.55.0 or later
 * tags
   - fix crash bug due to race condition
+* output
+  - pipewire: adjust to PipeWire 0.3.64 API change
 * fix build failures with GCC 13
 
 ver 0.23.11 (2022/11/28)
